--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "latest-version": "^5.1.0",
+    "normalize.css": "^8.0.1",
     "postcss-cli-simple": "^3.0.0"
   }
 }
