--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": " npm-run-all build -p watch:*",
-    "watch:browsersync": "browser-sync --files \"css/*.css\"",
-    "watch:sassprefixer": "onchange -d 100 css/style.css onchange node-sass --output-style expanded --source-map true -o css sass -- autoprefixer-cli -o  css/style.css"
+    "watch:browsersync": "browser-sync start --server --files css/*.css, *.html",
+    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
+    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.css"
   },
   "repository": {
     "type": "git",
