--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "https://adeeio.github.io/learning-git-2/",
   "main": "index.js",
   "scripts": {
+    "init-project": "npm install && npm-run-all init:*",
+    "init:dires": "mkdirp sass css vendor images js",
+    "init:files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
+    "test": "npm-run-all test:*",
+    "test:html": "globstar nu-html-checker *.html",
     "build": "npm-run-all build:*",
-    "build:html": "globstar nu-html-checker *.html",
-    "build:compress-images": "node compress.js",
     "build:clean": "rimraf css/*.css",
+    "build:compress-images": "node compress.js",
     "build:sass": "node-sass --output-style compact -o css sass",
-    "build:autoprefixer": "autoprefixer-cli css/style.css"
+    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch": " npm-run-all build -p watch:*",
+    "watch:browsersync": "browser-sync start --server --files css/*.css, *.html",
+    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
+    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.css"
   },
   "repository": {
     "type": "git",
@@ -25,7 +35,6 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.5",
-    "compress-images": "^1.5.8",
     "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.12.0",
@@ -36,6 +45,7 @@
   },
   "dependencies": {
     "latest-version": "^5.1.0",
+    "mustache": "^3.0.1",
     "normalize.css": "^8.0.1",
     "postcss-cli-simple": "^3.0.0"
   }
