--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "homepage": "https://github.com/adeeio/learning-git-2#readme",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
+    "compress-images": "^1.5.8",
     "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.12.0",
